[gd_scene load_steps=7 format=4 uid="uid://dpypjoppaaqqq"]

[ext_resource type="TileSet" uid="uid://bg6o58jsd1qfw" path="res://resources/brick_tiles.tres" id="1_dnfpw"]
[ext_resource type="Script" path="res://scenes/world/world_script.gd" id="2_khxvn"]
[ext_resource type="PackedScene" uid="uid://dtodiuecqodui" path="res://scenes/split_time/time_split_element.tscn" id="3_c5l40"]
[ext_resource type="PackedScene" uid="uid://ck1k3kmk8k6lb" path="res://scenes/traps/pendulum.tscn" id="4_8wr1d"]
[ext_resource type="PackedScene" uid="uid://dl2t8omyxxua1" path="res://scenes/traps/trap_door.tscn" id="5_km3u7"]
[ext_resource type="PackedScene" uid="uid://pod4inq6dqbv" path="res://scenes/traps/trap_wheel.tscn" id="6_juwkc"]

[node name="world" type="Node2D"]
script = ExtResource("2_khxvn")

[node name="world" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAAEAA4AAAAAAAAAAAAEAA8AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAAAAAAIAA4AAAAAAAAAAAAIAA8AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA0AAAAAAAAAAAAIAAwAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAoAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP//AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAIAP7/AAAAAAAAAAAIAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAJAP//AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP//AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAAMAP7/AAAAAAAAAAAMAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP//AAAAAAAAAAAOAP7/AAAAAAAAAAAOAP//AAAAAAAAAAAPAP7/AAAAAAAAAAAPAP//AAAAAAAAAAAQAP7/AAAAAAAAAAAQAP//AAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAOABIAAAAAAAAAAAAOABMAAAAAAAAAAAAOABQAAAAAAAAAAAAOABUAAAAAAAAAAAAOABYAAAAAAAAAAAAPABUAAAAAAAAAAAAPABYAAAAAAAAAAAAQABUAAAAAAAAAAAAQABYAAAAAAAAAAAARABUAAAAAAAAAAAARABYAAAAAAAAAAAASABUAAAAAAAAAAAASABYAAAAAAAAAAAATABUAAAAAAAAAAAATABYAAAAAAAAAAAAUABUAAAAAAAAAAAAUABYAAAAAAAAAAAAVABUAAAAAAAAAAAAVABYAAAAAAAAAAAAWABUAAAAAAAAAAAAWABYAAAAAAAAAAAAXABUAAAAAAAAAAAAXABYAAAAAAAAAAAAYABUAAAAAAAAAAAAYABYAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAAwAAAAAAAAAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAAAAAAAAAAAZABUAAAAAAAAAAAAZABYAAAAAAAAAAAAaABUAAAAAAAAAAAAaABYAAAAAAAAAAAAbABUAAAAAAAAAAAAbABYAAAAAAAAAAAAcABUAAAAAAAAAAAAcABYAAAAAAAAAAAAcAP7/AAAAAAAAAAAcAP//AAAAAAAAAAAdAP7/AAAAAAAAAAAdAP//AAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAdABIAAAAAAAAAAAAdABMAAAAAAAAAAAAdABQAAAAAAAAAAAAdABUAAAAAAAAAAAAdABYAAAAAAAAAAAAXAP7/AAAAAAAAAAAXAP//AAAAAAAAAAAYAP7/AAAAAAAAAAAYAP//AAAAAAAAAAAZAP7/AAAAAAAAAAAZAP//AAAAAAAAAAAaAP7/AAAAAAAAAAAaAP//AAAAAAAAAAAbAP7/AAAAAAAAAAAbAP//AAAAAAAAAAAeAP7/AAAAAAAAAAAeAP//AAAAAAAAAAAeAAAAAAAAAAAAAAAeAAEAAAAAAAAAAAAeAAIAAAAAAAAAAAAeAAMAAAAAAAAAAAAeAAQAAAAAAAAAAAAeAAUAAAAAAAAAAAAeAAYAAAAAAAAAAAAeAAcAAAAAAAAAAAAeAAgAAAAAAAAAAAAeAAkAAAAAAAAAAAAeAAoAAAAAAAAAAAAeAAsAAAAAAAAAAAAeAAwAAAAAAAAAAAAeAA0AAAAAAAAAAAAeAA4AAAAAAAAAAAAeAA8AAAAAAAAAAAAeABAAAAAAAAAAAAAeABEAAAAAAAAAAAAeABIAAAAAAAAAAAAeABMAAAAAAAAAAAAeABQAAAAAAAAAAAAeABUAAAAAAAAAAAAeABYAAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAAAAAAAAAANABUAAAAAAAAAAAANABYAAAAAAAAAAAD///7/AAAAAAAAAAD/////AAAAAAAAAAD//wAAAAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wsAAAAAAAAAAAD//wwAAAAAAAAAAAD//w0AAAAAAAAAAAD//w4AAAAAAAAAAAD//w8AAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAWAP7/AAAAAAAAAAAWAP//AAAAAAAAAAAWAP3/AAAAAAAAAAAXAP3/AAAAAAAAAAAXAPz/AAAAAAAAAAAWAPz/AAAAAAAAAAAWAPv/AAAAAAAAAAAXAPv/AAAAAAAAAAAXAPr/AAAAAAAAAAAWAPr/AAAAAAAAAAAQAP3/AAAAAAAAAAAPAP3/AAAAAAAAAAAPAPz/AAAAAAAAAAAQAPz/AAAAAAAAAAAQAPv/AAAAAAAAAAAPAPv/AAAAAAAAAAAPAPr/AAAAAAAAAAAQAPr/AAAAAAAAAAAPAPn/AAAAAAAAAAAYAPr/AAAAAAAAAAAZAPn/AAAAAAAAAAAaAPj/AAAAAAAAAAAbAPf/AAAAAAAAAAAcAPb/AAAAAAAAAAAdAPX/AAAAAAAAAAAdAPT/AAAAAAAAAAAdAPP/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPn/AAAAAAAAAAANAPn/AAAAAAAAAAANAPj/AAAAAAAAAAANAPf/AAAAAAAAAAAMAPf/AAAAAAAAAAAMAPb/AAAAAAAAAAALAPb/AAAAAAAAAAALAPX/AAAAAAAAAAAKAPT/AAAAAAAAAAAKAO7/AAAAAAAAAAAKAO3/AAAAAAAAAAALAO3/AAAAAAAAAAAMAO3/AAAAAAAAAAAMAOz/AAAAAAAAAAANAOz/AAAAAAAAAAAOAOz/AAAAAAAAAAAOAOv/AAAAAAAAAAAPAOv/AAAAAAAAAAAQAOv/AAAAAAAAAAAPAOz/AAAAAAAAAAAMAPj/AAAAAAAAAAALAPf/AAAAAAAAAAAKAPX/AAAAAAAAAAAKAPb/AAAAAAAAAAAJAPT/AAAAAAAAAAAJAPP/AAAAAAAAAAAJAO//AAAAAAAAAAAJAO7/AAAAAAAAAAAJAO3/AAAAAAAAAAAKAOz/AAAAAAAAAAALAOz/AAAAAAAAAAAMAOv/AAAAAAAAAAANAOv/AAAAAAAAAAAYAPn/AAAAAAAAAAAaAPf/AAAAAAAAAAAbAPb/AAAAAAAAAAAcAPX/AAAAAAAAAAAJAPX/AAAAAAAAAAAIAPD/AAAAAAAAAAAIAPH/AAAAAAAAAAAIAPL/AAAAAAAAAAAIAO//AAAAAAAAAAAHAO//AAAAAAAAAAAHAPD/AAAAAAAAAAAHAPH/AAAAAAAAAAAHAPL/AAAAAAAAAAAIAPP/AAAAAAAAAAAIAPT/AAAAAAAAAAAHAPP/AAAAAAAAAAAIAO7/AAAAAAAAAAAXAPn/AAAAAAAAAAAZAPj/AAAAAAAAAAAZAPf/AAAAAAAAAAAaAPb/AAAAAAAAAAAbAPX/AAAAAAAAAAAcAPT/AAAAAAAAAAAeAPL/AAAAAAAAAAAeAPP/AAAAAAAAAAAeAPD/AAAAAAAAAAAeAPH/AAAAAAAAAAAdAO//AAAAAAAAAAAcAO7/AAAAAAAAAAAbAO3/AAAAAAAAAAAaAO3/AAAAAAAAAAAZAOz/AAAAAAAAAAAYAOz/AAAAAAAAAAAXAOz/AAAAAAAAAAAWAOv/AAAAAAAAAAAXAOv/AAAAAAAAAAAYAOv/AAAAAAAAAAAZAOv/AAAAAAAAAAAaAOv/AAAAAAAAAAAaAOz/AAAAAAAAAAAbAOz/AAAAAAAAAAAcAOz/AAAAAAAAAAAcAO3/AAAAAAAAAAAdAO3/AAAAAAAAAAAdAO7/AAAAAAAAAAAeAO7/AAAAAAAAAAAeAO//AAAAAAAAAAAfAO//AAAAAAAAAAAfAPD/AAAAAAAAAAAfAPH/AAAAAAAAAAAfAPL/AAAAAAAAAAAfAPP/AAAAAAAAAAAeAPT/AAAAAAAAAAAOAPj/AAAAAAAAAAAYAPj/AAAAAAAAAAAWAOj/AAAAAAAAAAAWAOn/AAAAAAAAAAAWAOr/AAAAAAAAAAAXAOr/AAAAAAAAAAAXAOn/AAAAAAAAAAAXAOj/AAAAAAAAAAAQAOr/AAAAAAAAAAAQAOn/AAAAAAAAAAAQAOj/AAAAAAAAAAAPAOj/AAAAAAAAAAAPAOn/AAAAAAAAAAAPAOr/AAAAAAAAAAAXAOf/AAAAAAAAAAAYAOf/AAAAAAAAAAAYAOb/AAAAAAAAAAAZAOb/AAAAAAAAAAAZAOX/AAAAAAAAAAAaAOX/AAAAAAAAAAAaAOT/AAAAAAAAAAAbAOT/AAAAAAAAAAAbAOP/AAAAAAAAAAAPAOf/AAAAAAAAAAAOAOf/AAAAAAAAAAAOAOb/AAAAAAAAAAANAOb/AAAAAAAAAAANAOX/AAAAAAAAAAAMAOX/AAAAAAAAAAAMAOT/AAAAAAAAAAALAOT/AAAAAAAAAAALAOP/AAAAAAAAAAAcAOP/AAAAAAAAAAAcAOL/AAAAAAAAAAAcAOH/AAAAAAAAAAAdAOH/AAAAAAAAAAAdAOL/AAAAAAAAAAAcAOD/AAAAAAAAAAAdAOD/AAAAAAAAAAAdAN//AAAAAAAAAAAcAN//AAAAAAAAAAAcAN7/AAAAAAAAAAAcAN3/AAAAAAAAAAAcANz/AAAAAAAAAAAdANz/AAAAAAAAAAAdAN3/AAAAAAAAAAAdAN7/AAAAAAAAAAAKAOL/AAAAAAAAAAAKAOP/AAAAAAAAAAAJAOL/AAAAAAAAAAAKAOH/AAAAAAAAAAAJAOH/AAAAAAAAAAAJAOD/AAAAAAAAAAAKAOD/AAAAAAAAAAAKAN//AAAAAAAAAAAKAN7/AAAAAAAAAAAKAN3/AAAAAAAAAAAKANz/AAAAAAAAAAAKANv/AAAAAAAAAAAJANv/AAAAAAAAAAAJANz/AAAAAAAAAAAJAN3/AAAAAAAAAAAJAN7/AAAAAAAAAAAJAN//AAAAAAAAAAAcANv/AAAAAAAAAAAdANv/AAAAAAAAAAAOAOj/AAAAAAAAAAANAOf/AAAAAAAAAAAMAOb/AAAAAAAAAAALAOX/AAAAAAAAAAAKAOT/AAAAAAAAAAAJAOP/AAAAAAAAAAAYAOj/AAAAAAAAAAAZAOf/AAAAAAAAAAAaAOb/AAAAAAAAAAAbAOX/AAAAAAAAAAAcAOT/AAAAAAAAAAAdAOP/AAAAAAAAAAATAND/AAAAAAAAAAATANH/AAAAAAAAAAATANL/AAAAAAAAAAATANP/AAAAAAAAAAATANT/AAAAAAAAAAATANX/AAAAAAAAAAATANb/AAAAAAAAAAATANf/AAAAAAAAAAATANj/AAAAAAAAAAAUANj/AAAAAAAAAAAVANj/AAAAAAAAAAASANj/AAAAAAAAAAARANj/AAAAAAAAAAAKANr/AAAAAAAAAAAKANn/AAAAAAAAAAAKANj/AAAAAAAAAAAKANf/AAAAAAAAAAAJANj/AAAAAAAAAAAJANn/AAAAAAAAAAAJANr/AAAAAAAAAAAJANf/AAAAAAAAAAAcANj/AAAAAAAAAAAcANn/AAAAAAAAAAAcANr/AAAAAAAAAAAdANr/AAAAAAAAAAAdANn/AAAAAAAAAAAdANj/AAAAAAAAAAAQANf/AAAAAAAAAAAPANf/AAAAAAAAAAAOANb/AAAAAAAAAAAPANb/AAAAAAAAAAAWANf/AAAAAAAAAAAXANf/AAAAAAAAAAAXANb/AAAAAAAAAAAYANb/AAAAAAAAAAARANf/AAAAAAAAAAASANf/AAAAAAAAAAAUANf/AAAAAAAAAAAVANf/AAAAAAAAAAAcANf/AAAAAAAAAAAcANb/AAAAAAAAAAAcANX/AAAAAAAAAAAcANL/AAAAAAAAAAAcANT/AAAAAAAAAAAcANP/AAAAAAAAAAAcANH/AAAAAAAAAAAcAND/AAAAAAAAAAAcAM//AAAAAAAAAAAcAM7/AAAAAAAAAAAdAM7/AAAAAAAAAAAdAM//AAAAAAAAAAAdAND/AAAAAAAAAAAdANH/AAAAAAAAAAAdANL/AAAAAAAAAAAdANP/AAAAAAAAAAAdANT/AAAAAAAAAAAdANf/AAAAAAAAAAAdANb/AAAAAAAAAAAdANX/AAAAAAAAAAAKAM7/AAAAAAAAAAAKAM//AAAAAAAAAAAKAND/AAAAAAAAAAAKANH/AAAAAAAAAAAKANL/AAAAAAAAAAAKANP/AAAAAAAAAAAKANT/AAAAAAAAAAAKANX/AAAAAAAAAAAKANb/AAAAAAAAAAAJANb/AAAAAAAAAAAJANX/AAAAAAAAAAAJANT/AAAAAAAAAAAJANP/AAAAAAAAAAAJANL/AAAAAAAAAAAJANH/AAAAAAAAAAAJAND/AAAAAAAAAAAJAM//AAAAAAAAAAAJAM7/AAAAAAAAAAAbAM3/AAAAAAAAAAAaAM3/AAAAAAAAAAAbAM7/AAAAAAAAAAAbAM//AAAAAAAAAAAaAM7/AAAAAAAAAAAZAM3/AAAAAAAAAAALAM//AAAAAAAAAAAMAM7/AAAAAAAAAAANAM3/AAAAAAAAAAAMAM3/AAAAAAAAAAALAM7/AAAAAAAAAAALAM3/AAAAAAAAAAAKAM3/AAAAAAAAAAALAMz/AAAAAAAAAAAMAMz/AAAAAAAAAAANAMz/AAAAAAAAAAAOAMz/AAAAAAAAAAAPAMv/AAAAAAAAAAAOAMv/AAAAAAAAAAAMAMv/AAAAAAAAAAANAMv/AAAAAAAAAAANAMr/AAAAAAAAAAAOAMr/AAAAAAAAAAAPAMr/AAAAAAAAAAAQAMr/AAAAAAAAAAAPAMn/AAAAAAAAAAAWAMr/AAAAAAAAAAAXAMv/AAAAAAAAAAAYAMz/AAAAAAAAAAAZAMz/AAAAAAAAAAAaAMz/AAAAAAAAAAAZAMv/AAAAAAAAAAAYAMv/AAAAAAAAAAAXAMr/AAAAAAAAAAAYAMr/AAAAAAAAAAAcAM3/AAAAAAAAAAAbAMz/AAAAAAAAAAAaAMv/AAAAAAAAAAAZAMr/AAAAAAAAAAAXAMn/AAAAAAAAAAAYAMn/AAAAAAAAAAAWAMn/AAAAAAAAAAAQAMn/AAAAAAAAAAAOAMn/AAAAAAAAAAAXAMj/AAAAAAAAAAAYAMf/AAAAAAAAAAAZAMb/AAAAAAAAAAAaAMX/AAAAAAAAAAAbAMT/AAAAAAAAAAAQAMj/AAAAAAAAAAARAMf/AAAAAAAAAAAUAMT/AAAAAAAAAAATAMX/AAAAAAAAAAASAMb/AAAAAAAAAAAYAMj/AAAAAAAAAAAZAMf/AAAAAAAAAAAaAMb/AAAAAAAAAAAbAMX/AAAAAAAAAAAcAMT/AAAAAAAAAAAVAMP/AAAAAAAAAAAWAML/AAAAAAAAAAAXAMH/AAAAAAAAAAAYAMD/AAAAAAAAAAAcAMP/AAAAAAAAAAAdAMP/AAAAAAAAAAAdAML/AAAAAAAAAAAeAML/AAAAAAAAAAAeAMH/AAAAAAAAAAAfAMH/AAAAAAAAAAAfAMD/AAAAAAAAAAAgAMD/AAAAAAAAAAAfAL//AAAAAAAAAAAfAL7/AAAAAAAAAAAfAL3/AAAAAAAAAAAfALz/AAAAAAAAAAAgALz/AAAAAAAAAAAgAL3/AAAAAAAAAAAgAL7/AAAAAAAAAAAgAL//AAAAAAAAAAAYAL3/AAAAAAAAAAAYALz/AAAAAAAAAAAYAL7/AAAAAAAAAAAYAL//AAAAAAAAAAAfALv/AAAAAAAAAAAfALr/AAAAAAAAAAAeALr/AAAAAAAAAAAeALn/AAAAAAAAAAAdALn/AAAAAAAAAAAcALj/AAAAAAAAAAAdALj/AAAAAAAAAAAeALj/AAAAAAAAAAAfALn/AAAAAAAAAAAgALr/AAAAAAAAAAAgALv/AAAAAAAAAAAYALv/AAAAAAAAAAAXALr/AAAAAAAAAAAWALn/AAAAAAAAAAAVALn/AAAAAAAAAAAWALr/AAAAAAAAAAAXALv/AAAAAAAAAAAXALz/AAAAAAAAAAAXAL3/AAAAAAAAAAAXAL7/AAAAAAAAAAAXAL//AAAAAAAAAAAXAMD/AAAAAAAAAAAWAMH/AAAAAAAAAAAVAML/AAAAAAAAAAAUAMP/AAAAAAAAAAATAMT/AAAAAAAAAAASAMX/AAAAAAAAAAARAMb/AAAAAAAAAAAQAMf/AAAAAAAAAAAPAMj/AAAAAAAAAAAVALj/AAAAAAAAAAAUALf/AAAAAAAAAAAUALj/AAAAAAAAAAATALf/AAAAAAAAAAAbALf/AAAAAAAAAAAaALb/AAAAAAAAAAAZALX/AAAAAAAAAAAbALb/AAAAAAAAAAAcALf/AAAAAAAAAAAaALX/AAAAAAAAAAATALb/AAAAAAAAAAATALX/AAAAAAAAAAATALT/AAAAAAAAAAATALP/AAAAAAAAAAAZALP/AAAAAAAAAAAZALT/AAAAAAAAAAAaALT/AAAAAAAAAAAaALP/AAAAAAAAAAASALX/AAAAAAAAAAASALb/AAAAAAAAAAASALT/AAAAAAAAAAASALP/AAAAAAAAAAASALL/AAAAAAAAAAATALH/AAAAAAAAAAATALL/AAAAAAAAAAAUALD/AAAAAAAAAAAUALH/AAAAAAAAAAAVAJ3/AAAAAAAAAAAVAJ7/AAAAAAAAAAAVAJ//AAAAAAAAAAAVAKD/AAAAAAAAAAAVAK//AAAAAAAAAAAVALD/AAAAAAAAAAAWAJ3/AAAAAAAAAAAWAJ7/AAAAAAAAAAAWAJ//AAAAAAAAAAAWAKD/AAAAAAAAAAAWAKH/AAAAAAAAAAAWAK7/AAAAAAAAAAAWAK//AAAAAAAAAAAXAKH/AAAAAAAAAAAXAKL/AAAAAAAAAAAXAK3/AAAAAAAAAAAXAK7/AAAAAAAAAAAYAKL/AAAAAAAAAAAYAKP/AAAAAAAAAAAYAKz/AAAAAAAAAAAYAK3/AAAAAAAAAAAZAKP/AAAAAAAAAAAZAKT/AAAAAAAAAAAZAKv/AAAAAAAAAAAZAKz/AAAAAAAAAAAaAKT/AAAAAAAAAAAaAKX/AAAAAAAAAAAaAKb/AAAAAAAAAAAaAKf/AAAAAAAAAAAaAKj/AAAAAAAAAAAaAKn/AAAAAAAAAAAaAKr/AAAAAAAAAAAaAKv/AAAAAAAAAAAaALL/AAAAAAAAAAAbAKX/AAAAAAAAAAAbAKb/AAAAAAAAAAAbAKf/AAAAAAAAAAAbAKj/AAAAAAAAAAAbAKn/AAAAAAAAAAAbAKr/AAAAAAAAAAAbALH/AAAAAAAAAAAbALL/AAAAAAAAAAAcAJ3/AAAAAAAAAAAcAJ7/AAAAAAAAAAAcAJ//AAAAAAAAAAAcALD/AAAAAAAAAAAcALH/AAAAAAAAAAAdAJ3/AAAAAAAAAAAdAJ7/AAAAAAAAAAAdAJ//AAAAAAAAAAAdAKD/AAAAAAAAAAAdAK//AAAAAAAAAAAdALD/AAAAAAAAAAAeAKD/AAAAAAAAAAAeAKH/AAAAAAAAAAAeAK7/AAAAAAAAAAAeAK//AAAAAAAAAAAfAKH/AAAAAAAAAAAfAKL/AAAAAAAAAAAfAK3/AAAAAAAAAAAfAK7/AAAAAAAAAAAgAKL/AAAAAAAAAAAgAKP/AAAAAAAAAAAgAKz/AAAAAAAAAAAgAK3/AAAAAAAAAAAhAKL/AAAAAAAAAAAhAKP/AAAAAAAAAAAhAKT/AAAAAAAAAAAhAKv/AAAAAAAAAAAhAKz/AAAAAAAAAAAiAKP/AAAAAAAAAAAiAKT/AAAAAAAAAAAiAKX/AAAAAAAAAAAiAKb/AAAAAAAAAAAiAKf/AAAAAAAAAAAiAKj/AAAAAAAAAAAiAKn/AAAAAAAAAAAiAKr/AAAAAAAAAAAiAKv/AAAAAAAAAAAjAKT/AAAAAAAAAAAjAKX/AAAAAAAAAAAjAKb/AAAAAAAAAAAjAKf/AAAAAAAAAAAjAKj/AAAAAAAAAAAjAKn/AAAAAAAAAAAjAKr/AAAAAAAAAAAPAI//AAAAAAAAAAAPAJD/AAAAAAAAAAAPAJH/AAAAAAAAAAAPAJL/AAAAAAAAAAAPAJP/AAAAAAAAAAAPAJT/AAAAAAAAAAAPAJX/AAAAAAAAAAAPAJb/AAAAAAAAAAAPAJf/AAAAAAAAAAAPAJj/AAAAAAAAAAAPAJn/AAAAAAAAAAAPAJr/AAAAAAAAAAAPAJv/AAAAAAAAAAAPAJz/AAAAAAAAAAAQAI//AAAAAAAAAAARAI//AAAAAAAAAAASAI//AAAAAAAAAAATAI//AAAAAAAAAAAfAI//AAAAAAAAAAAgAI//AAAAAAAAAAAhAI//AAAAAAAAAAAiAI//AAAAAAAAAAAjAI//AAAAAAAAAAAjAJD/AAAAAAAAAAAjAJH/AAAAAAAAAAAjAJL/AAAAAAAAAAAjAJP/AAAAAAAAAAAjAJT/AAAAAAAAAAAjAJX/AAAAAAAAAAAjAJb/AAAAAAAAAAAjAJf/AAAAAAAAAAAjAJj/AAAAAAAAAAAjAJn/AAAAAAAAAAAjAJr/AAAAAAAAAAAjAJv/AAAAAAAAAAAjAJz/AAAAAAAAAAAUAJ3/AAAAAAAAAAATAJ3/AAAAAAAAAAASAJ3/AAAAAAAAAAARAJ3/AAAAAAAAAAAQAJ3/AAAAAAAAAAAPAJ3/AAAAAAAAAAAeAJ3/AAAAAAAAAAAfAJ3/AAAAAAAAAAAgAJ3/AAAAAAAAAAAhAJ3/AAAAAAAAAAAiAJ3/AAAAAAAAAAAjAJ3/AAAAAAAAAAAZAI7/AAAAAAAAAAAYAI3/AAAAAAAAAAAZAI3/AAAAAAAAAAAaAI3/AAAAAAAAAAATAI7/AAAAAAAAAAASAI3/AAAAAAAAAAARAIz/AAAAAAAAAAAQAIv/AAAAAAAAAAAfAI7/AAAAAAAAAAAgAI3/AAAAAAAAAAAZAIf/AAAAAAAAAAAZAIb/AAAAAAAAAAAZAIX/AAAAAAAAAAAZAIT/AAAAAAAAAAAZAIP/AAAAAAAAAAAZAIL/AAAAAAAAAAAZAIH/AAAAAAAAAAAZAID/AAAAAAAAAAAZAH//AAAAAAAAAAAZAH7/AAAAAAAAAAAZAH3/AAAAAAAAAAAZAHz/AAAAAAAAAAAPAIr/AAAAAAAAAAAOAIn/AAAAAAAAAAAOAIj/AAAAAAAAAAAOAIf/AAAAAAAAAAAOAIb/AAAAAAAAAAAOAIX/AAAAAAAAAAAOAIT/AAAAAAAAAAAOAIP/AAAAAAAAAAAOAIL/AAAAAAAAAAAOAIH/AAAAAAAAAAAOAID/AAAAAAAAAAAOAH//AAAAAAAAAAAOAH7/AAAAAAAAAAAOAH3/AAAAAAAAAAAOAHz/AAAAAAAAAAAgAIH/AAAAAAAAAAAgAIL/AAAAAAAAAAAgAIP/AAAAAAAAAAAgAIT/AAAAAAAAAAAgAIX/AAAAAAAAAAAgAIb/AAAAAAAAAAAgAIf/AAAAAAAAAAAgAIj/AAAAAAAAAAAgAIn/AAAAAAAAAAAgAIr/AAAAAAAAAAAgAIv/AAAAAAAAAAAgAIz/AAAAAAAAAAAgAH7/AAAAAAAAAAAgAH//AAAAAAAAAAAgAID/AAAAAAAAAAAgAHz/AAAAAAAAAAAgAH3/AAAAAAAAAAAPAHz/AAAAAAAAAAAQAHv/AAAAAAAAAAARAHr/AAAAAAAAAAASAHn/AAAAAAAAAAATAHj/AAAAAAAAAAAUAHf/AAAAAAAAAAAVAHb/AAAAAAAAAAAWAHb/AAAAAAAAAAAXAHb/AAAAAAAAAAAYAHb/AAAAAAAAAAAZAHb/AAAAAAAAAAAaAHb/AAAAAAAAAAAbAHb/AAAAAAAAAAAcAHb/AAAAAAAAAAAdAHb/AAAAAAAAAAAeAHb/AAAAAAAAAAAfAHb/AAAAAAAAAAAgAHb/AAAAAAAAAAAhAHz/AAAAAAAAAAAiAHz/AAAAAAAAAAAjAHz/AAAAAAAAAAAkAHz/AAAAAAAAAAAlAHz/AAAAAAAAAAAhAHb/AAAAAAAAAAAiAHb/AAAAAAAAAAAjAHb/AAAAAAAAAAAkAHb/AAAAAAAAAAAlAHb/AAAAAAAAAAAmAHb/AAAAAAAAAAAnAHb/AAAAAAAAAAAoAHb/AAAAAAAAAAApAHb/AAAAAAAAAAArAHX/AAAAAAAAAAAqAHb/AAAAAAAAAAAsAHT/AAAAAAAAAAAtAHP/AAAAAAAAAAAuAHP/AAAAAAAAAAAvAHP/AAAAAAAAAAAwAHP/AAAAAAAAAAAxAHP/AAAAAAAAAAAzAHT/AAAAAAAAAAA1AHb/AAAAAAAAAAAyAHP/AAAAAAAAAAA1AH3/AAAAAAAAAAA2AHz/AAAAAAAAAAA0AH7/AAAAAAAAAAAzAH//AAAAAAAAAAApAHz/AAAAAAAAAAAoAHz/AAAAAAAAAAAnAHz/AAAAAAAAAAAmAHz/AAAAAAAAAAA0AHT/AAAAAAAAAAA1AHX/AAAAAAAAAAAzAHP/AAAAAAAAAAA2AHb/AAAAAAAAAAAqAHz/AAAAAAAAAAArAHz/AAAAAAAAAAArAHb/AAAAAAAAAAAtAHT/AAAAAAAAAAAtAH7/AAAAAAAAAAAuAH//AAAAAAAAAAAtAH//AAAAAAAAAAAsAH7/AAAAAAAAAAArAH3/AAAAAAAAAAAvAH//AAAAAAAAAAAwAH//AAAAAAAAAAAxAH//AAAAAAAAAAAyAH//AAAAAAAAAAAzAH7/AAAAAAAAAAA1AHz/AAAAAAAAAAA0AHX/AAAAAAAAAAAsAHX/AAAAAAAAAAAsAH3/AAAAAAAAAAA0AH3/AAAAAAAAAAAsAHz/AAAAAAAAAAAtAH3/AAAAAAAAAAAuAH7/AAAAAAAAAAAvAH7/AAAAAAAAAAAwAH7/AAAAAAAAAAAxAH7/AAAAAAAAAAAyAH7/AAAAAAAAAAAzAH3/AAAAAAAAAAA0AHz/AAAAAAAAAAAsAHb/AAAAAAAAAAAtAHX/AAAAAAAAAAAuAHT/AAAAAAAAAAAvAHT/AAAAAAAAAAAwAHT/AAAAAAAAAAAxAHT/AAAAAAAAAAAyAHT/AAAAAAAAAAAzAHX/AAAAAAAAAAA0AHb/AAAAAAAAAAAqAHX/AAAAAAAAAAApAHX/AAAAAAAAAAAoAHX/AAAAAAAAAAAnAHX/AAAAAAAAAAAmAHX/AAAAAAAAAAAlAHX/AAAAAAAAAAAkAHX/AAAAAAAAAAAjAHX/AAAAAAAAAAAiAHX/AAAAAAAAAAAhAHX/AAAAAAAAAAAgAHX/AAAAAAAAAAAfAHX/AAAAAAAAAAAeAHX/AAAAAAAAAAAdAHX/AAAAAAAAAAAcAHX/AAAAAAAAAAAbAHX/AAAAAAAAAAAaAHX/AAAAAAAAAAAZAHX/AAAAAAAAAAAYAHX/AAAAAAAAAAAXAHX/AAAAAAAAAAAWAHX/AAAAAAAAAAAVAHX/AAAAAAAAAAAUAHb/AAAAAAAAAAATAHf/AAAAAAAAAAASAHj/AAAAAAAAAAARAHn/AAAAAAAAAAAQAHr/AAAAAAAAAAAPAHv/AAAAAAAAAAAhAH3/AAAAAAAAAAAiAH3/AAAAAAAAAAAjAH3/AAAAAAAAAAAkAH3/AAAAAAAAAAAlAH3/AAAAAAAAAAAmAH3/AAAAAAAAAAAnAH3/AAAAAAAAAAAoAH3/AAAAAAAAAAApAH3/AAAAAAAAAAAqAH3/AAAAAAAAAAAhAH7/AAAAAAAAAAAhAH//AAAAAAAAAAAhAID/AAAAAAAAAAAhAIH/AAAAAAAAAAAhAIL/AAAAAAAAAAAhAIP/AAAAAAAAAAAhAIT/AAAAAAAAAAAhAIX/AAAAAAAAAAAhAIb/AAAAAAAAAAAhAIf/AAAAAAAAAAAhAIj/AAAAAAAAAAAhAIn/AAAAAAAAAAAhAIr/AAAAAAAAAAAhAIv/AAAAAAAAAAAhAIz/AAAAAAAAAAAhAI3/AAAAAAAAAAAhAI7/AAAAAAAAAAAgAI7/AAAAAAAAAAAOAIr/AAAAAAAAAAAPAIv/AAAAAAAAAAAQAIz/AAAAAAAAAAARAI3/AAAAAAAAAAASAI7/AAAAAAAAAAANAH3/AAAAAAAAAAANAH7/AAAAAAAAAAANAH//AAAAAAAAAAANAID/AAAAAAAAAAANAIH/AAAAAAAAAAANAIL/AAAAAAAAAAANAIP/AAAAAAAAAAANAIT/AAAAAAAAAAANAIX/AAAAAAAAAAANAIb/AAAAAAAAAAANAIf/AAAAAAAAAAANAIj/AAAAAAAAAAANAIn/AAAAAAAAAAA3AHz/AAAAAAAAAAA4AHz/AAAAAAAAAAA5AHz/AAAAAAAAAAA6AHz/AAAAAAAAAAA7AHz/AAAAAAAAAAA3AHb/AAAAAAAAAAA4AHb/AAAAAAAAAAA8AHz/AAAAAAAAAAA9AHz/AAAAAAAAAAA+AHz/AAAAAAAAAAA/AHb/AAAAAAAAAAA/AHf/AAAAAAAAAAA/AHj/AAAAAAAAAAA/AHn/AAAAAAAAAAA/AHr/AAAAAAAAAAA/AHv/AAAAAAAAAAA/AHz/AAAAAAAAAAA+AHv/AAAAAAAAAAA5AHX/AAAAAAAAAAA/AHX/AAAAAAAAAAA4AHX/AAAAAAAAAAA5AHT/AAAAAAAAAAA5AHP/AAAAAAAAAAA/AHT/AAAAAAAAAAA/AHP/AAAAAAAAAAA8AHH/AAAAAAAAAAA8AHD/AAAAAAAAAAA8AG//AAAAAAAAAAA6AG//AAAAAAAAAAA7AG//AAAAAAAAAAA9AG//AAAAAAAAAAA+AG//AAAAAAAAAAA4AHL/AAAAAAAAAAA3AHH/AAAAAAAAAAA2AHD/AAAAAAAAAAA2AG//AAAAAAAAAAA2AG7/AAAAAAAAAAA2AG3/AAAAAAAAAAA2AGz/AAAAAAAAAAA2AGv/AAAAAAAAAAA3AGr/AAAAAAAAAAA4AGn/AAAAAAAAAAA5AGn/AAAAAAAAAAA6AGn/AAAAAAAAAAA7AGn/AAAAAAAAAAA8AGn/AAAAAAAAAAA9AGn/AAAAAAAAAAA+AGn/AAAAAAAAAAA/AGn/AAAAAAAAAABAAGn/AAAAAAAAAABCAG//AAAAAAAAAABCAHD/AAAAAAAAAABBAHH/AAAAAAAAAABAAHL/AAAAAAAAAABBAGr/AAAAAAAAAABCAGv/AAAAAAAAAABCAGz/AAAAAAAAAABCAG3/AAAAAAAAAABCAG7/AAAAAAAAAAA=")
tile_set = ExtResource("1_dnfpw")

[node name="time_split_0" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(271, 80)
rotation = 1.57079
metadata/_edit_lock_ = true

[node name="time_split_1" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(720, 592)
rotation = 1.57079
metadata/_edit_lock_ = true

[node name="time_split_2" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(624, -80)
metadata/_edit_lock_ = true

[node name="time_split_3" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(624, -1744)
metadata/_edit_lock_ = true

[node name="time_split_4" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(816, -3152)
metadata/_edit_lock_ = true

[node name="time_split_5" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(1072, -4304)
rotation = 1.5708
metadata/_edit_lock_ = true

[node name="time_split_6" parent="world" instance=ExtResource("3_c5l40")]
unique_name_in_owner = true
position = Vector2(1936, -4528)
metadata/_edit_lock_ = true

[node name="Parallax2D" type="Parallax2D" parent="."]

[node name="start_position" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(128, 380)

[node name="pendulum" parent="." instance=ExtResource("4_8wr1d")]
position = Vector2(816, -3601)

[node name="trap_door" parent="." instance=ExtResource("5_km3u7")]
position = Vector2(496, -4016)

[node name="trap_door2" parent="." instance=ExtResource("5_km3u7")]
position = Vector2(784, -4016)
scale = Vector2(-1, 1)

[node name="trap_door3" parent="." instance=ExtResource("5_km3u7")]
position = Vector2(1008, -4016)
scale = Vector2(-1, 1)

[node name="trap_wheel" parent="." instance=ExtResource("6_juwkc")]
position = Vector2(1552, -4304)
